Изменены вывод всех пользователей.Слиты из 3 фун в 1
